# whenx

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: d5c1fce30ec3_create_tables.py
scripts/: create_all.py  delete_all_data.py
tests/: test_captain.py  test_compare_observations.py  test_create_autogpt.py  test_create_report.py  test_scout.py  test_send_email.py  test_sentinel.py  test_soldier.py  test_team.py
whenx/: __main__.py  console.py  database.py
whenx/models/: __init__.py  captain.py  scout.py  sentinel.py  soldier.py  team.py  user.py
whenx/services/: __init__.py  compare_observations.py  create_autogpt.py  create_plan_agent.py  create_react_agent.py  create_report.py  create_team.py  send_email.py
